production/monitoring/minio.service.yml
apiVersion: v1
kind: Service
metadata:
  name: "external-minio-service"
  namespace: monitoring
spec:
  ports:
    - name: minio
      protocol: TCP
      port: 9000
      targetPort: 9000 
      nodePort: 0 
#spec:
#  type: ExternalName
#  externalName: "s1.ubuntu.home"
